src/test/06-Errors/error-auto-null2.txt
error-auto-null2.ck:2:9: error: cannot infer 'auto' type from '@null' type
[2] null => auto foo;
            ^
